<resources>
    <string name="app_name">ZorabotsTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="advanced_composer">Advanced Composer</string>
    <string name="click_on_the_button_to_choose_your_list">Click on the button to choose your Json</string>
    <string name="all_blocks">All Blocks</string>
    <string name="mediamarkt_composition">Mediamarkt Composition</string>
    <string name="url">URL</string>
    <string name="url_json">Url Json</string>
    <string name="main_page">Main Page</string>
</resources>